99-deployments/manifests/opencti/templates/ing-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - path: /tools/grafana-loki
            pathType: Prefix
            backend:
              service:
                name: opencti-main-minio-console
                port:
                  number: 9001
